# pv-site-api

./: .all-contributorsrc  .bumpversion.cfg  .coverage  .env  .env.dist  .env.test  .gitignore  Makefile  README.md  coverage.xml  main.py  pydantic_models.py  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml  lint.yml  release-docker.yml  test-docker.yaml  test-pytest.yaml
infrastructure/: Dockerfile  test-docker-compose.yml
infrastructure/terraform/: main.tf  state.tf  variables.tf
infrastructure/terraform/api/: README.md  docker-compose.yml  eb.tf  iam.tf  output.tf  s3.tf  security_group.tf  variables.tf
notebooks/: dev_prod_sites_api_explore.ipynb  quartz_site_api_example.ipynb  quartz_solar_sites_api.ipynb  readme.md
pv_site_api/: __init__.py  _db_helpers.py  app.py  auth.py  cache.py  config.py  convert.py  enode_auth.py  fake.py  main.py  pydantic_models.py  redoc_theme.py  session.py  utils.py
pv_site_api/data/: dno.py  gsp.py  gsp_new_ids_and_names-edited.csv  utils.py
pv_site_api/data/dno/: dno.dbf  dno.shp  dno.shx
pv_site_api/data/gsp/: gsp.dbf  gsp.shx
scripts/: get_gsp_and_dno.py
src/: fake.py  main.py  pydantic_models.py  session.py  utils.py
tests/: .coverage  conftest.py  coverage.xml  test_auth.py  test_cache.py  test_clearsky.py  test_enode.py  test_enode_auth.py  test_forecast.py  test_generation.py  test_inverters.py  test_main.py  test_pydantic_models.py  test_site_delete.py  test_sites.py  test_status.py  test_utils.py
tests/data/: test_dno_and_gsp.py
